# ehrlich

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
server/: .dockerignore  Dockerfile  pyproject.toml
server/src/ehrlich/: __main__.py  config.py
server/tests/: conftest.py
server/tests/analysis/: test_analysis_service.py  test_causal.py  test_causal_service.py  test_causal_tools.py  test_did_estimator.py  test_evidence_standards.py  test_gtopdb_client.py  test_psm_estimator.py  test_pubchem_client.py  test_rdd_estimator.py  test_statistics.py  test_synthetic_control_estimator.py  test_tools.py
server/tests/api/: test_auth.py  test_credits.py  test_investigation.py  test_methodology.py  test_molecule.py  test_stats.py
server/tests/chemistry/: test_chemistry_service.py  test_compound.py  test_rdkit_adapter.py  test_tools.py
server/tests/fixtures/: pkcsm_response.json  sample_chembl.csv
server/tests/impact/: test_did_estimator.py  test_evaluation_standards.py  test_fred_client.py  test_impact_service.py  test_mx_clients.py  test_mx_tools.py  test_tools.py  test_tools_did.py  test_us_clients.py  test_us_tools.py  test_who_client.py  test_worldbank_client.py
server/tests/integration/: test_e2e.py
server/tests/investigation/: test_anthropic_client.py  test_controls.py  test_cost_tracker.py  test_domain_config.py  test_evidence_evaluation.py  test_experiment.py  test_file_processor.py  test_mcp_bridge.py  test_multi_orchestrator.py  test_orchestrator.py  test_paper_generator.py  test_prompts.py  test_repository.py  test_sqlite_repository.py  test_sse.py  (+8 more)
(+441 files in other folders)
