[project]
name = "ehrlich"
version = "0.1.0"
description = "AI-powered antimicrobial discovery agent"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Ricardo Armenta", email = "ricardo@sequel.com"}]
dependencies = [
    "anthropic>=0.52,<1",
    "mcp>=1.25,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sse-starlette>=2,<3",
    "pydantic-settings>=2,<3",
    "rdkit>=2024.9",
    "xgboost>=2,<3",
    "scikit-learn>=1.6,<2",
    "pandas>=2,<3",
    "numpy>=2,<3",
    "scipy>=1.14,<2",
    "requests>=2.32,<3",
    "joblib>=1.4,<2",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
docking = [
    "vina>=1.2,<2",
    "meeko>=0.6,<1",
]
deeplearning = [
    "chemprop>=2.2.2,<3",
]
all = [
    "ehrlich[docking,deeplearning]",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "pre-commit>=4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ehrlich"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["ehrlich"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ehrlich"]

[tool.coverage.report]
fail_under = 80
show_missing = true
